--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,21 @@ body {
   height: 100vh;
 }
 
-div {
+/* div {
   background-color: teal;
   height: 20%;
+} */
+
+#outer {
+  background-color: teal;
+  height: 30%;
+  width: 50%;
+}
+
+#inner {
+  background-color: wheat;
+  height: 20%;
+
+  width: 30%;
+  /* of the parent! */
 }
