--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,8 @@ body {
 } */
 
 #outer {
-  background-color: teal;
+  background-color: lightblue;
   height: 40%;
   margin: 48px;
-  border: 2px solid red;
+  border-left: 20px solid blue;
 }
