--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,12 @@ p {
 } */
 
 #outer {
-  background-color: lightblue;
+  /* CSS supports, hex, rgb, rgba, hsl, hsla formats for colors */
+  /* colors are interchangeable with other formats*/
+  /* by far, hex and rgb are most popular */
+  /* transparency is introduced by using alpha channel using rgba or hsla */
+  /* transparency cannot be set in hex */
+  background-color: rgb(201, 158, 42);
   height: 40%;
   margin: 48px;
   padding: 60px 20px 40px 80px;
