--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,12 @@ p {
   /* transparency cannot be set in hex */
   background-color: rgb(201, 158, 42);
   height: 40%;
-  margin: 48px;
+  margin: 0.5em;
   padding: 60px 20px 40px 80px;
   border: 5px solid blue;
   border-radius: 50px 0px 0px 0px;
+}
+
+#para {
+  font-size: 1em;
 }
