--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ p {
   padding: 60px 20px 40px 80px;
   border: 5px solid blue;
   border-radius: 50px 0px 0px 0px;
+  font-size: 24px;
 }
 
 #para {
