--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   height: 100vh;
   margin: 0;
   /* margin reset for the body */
+  font-size: 48px;
 }
 
 h3 {
@@ -25,15 +26,17 @@ p {
   /* transparency cannot be set in hex */
   background-color: rgb(201, 158, 42);
   height: 40%;
-  margin: 0.5em;
+  margin: 0.5rem;
   padding: 60px 20px 40px 80px;
   border: 5px solid blue;
   border-radius: 50px 0px 0px 0px;
-  font-size: 24px;
+  font-size: 32px;
 }
 
 #para {
-  font-size: 1ch;
-  /* ch is zero's width of the parent
-  ex is x-height of the parent */
+  font-size: 1rem;
+}
+
+span {
+  font-size: 1.2rem;
 }
