--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   /* margin reset for the body */
   font-size: 48px;
+  color: aqua;
 }
 
 h3 {
@@ -31,12 +32,13 @@ p {
   border: 5px solid blue;
   border-radius: 50px 0px 0px 0px;
   font-size: 32px;
+  color: red;
 }
 
-#para {
-  font-size: 1rem;
+p {
+  color: green;
 }
 
-span {
-  font-size: 1.2rem;
+#p-tag {
+  color: indigo;
 }
