--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,3 @@
-h3 {
-  color: blue;
-}
-
-.notification {
-  background-color: rgb(184, 231, 255);
-  border-left: 0.5rem solid rgb(32, 112, 153);
-  height: 2rem;
-  padding: 2rem;
-  color: rgb(11, 64, 92);
-}
-
-li,
-p {
+.d-1 > p {
   color: green;
-}
-
-#topic-1,
-.topic-2 {
-  color: red;
 }
