--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,16 @@
-#outer {
-  position: relative;
-  width: 100%;
-  height: 400px;
-  background-color: green;
-  vertical-align: middle;
+button {
+  padding: 0.4rem 1rem;
+  border-radius: 0.3rem;
+  background-color: rgb(80, 43, 114);
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  border-style: none;
+  outline: none;
+  box-shadow: 0rem 0.07rem 0.1rem 0.1rem #aaa;
+  margin: 0.5rem;
+  display: inline-block;
 }
 
-.inner {
-  position: absolute;
-  width: 100px;
-  height: 120px;
-  background-color: brown;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
+button:hover {
+  background-color: rgb(131, 83, 175);
 }
