--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-button {
-  padding: 0.4rem 1rem;
+.button {
+  padding: 0.3rem 1rem;
   border-radius: 0.3rem;
   background-color: rgb(80, 43, 114);
   color: white;
@@ -9,8 +9,9 @@ button {
   box-shadow: 0rem 0.07rem 0.1rem 0.1rem #aaa;
   margin: 0.5rem;
   display: inline-block;
+  text-decoration: none;
 }
 
-button:hover {
+.button:hover {
   background-color: rgb(131, 83, 175);
 }
