--- a/styles.css
+++ b/styles.css
@@ -1,60 +1,69 @@
 body {
   margin: 0;
+  padding: 3rem;
 }
 
-.navbar {
-  background-color: lightblue;
-  padding: 0.5rem;
+.alert-container {
+  border: 1px solid #777;
+  border-radius: 1rem;
+  width: 40%;
 }
 
-.navbar::after {
-  content: '';
-  clear: both;
-  display: block;
+.alert-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 2rem;
 }
 
-.nav-item {
-  height: 1rem;
-  margin: 0.2rem;
-  padding: 0.5rem;
-  width: 3rem;
-  margin: 0rem 1rem;
-  float: right;
-  line-height: 1rem;
+.alert-footer {
+  display: flex;
+  justify-content: flex-end;
+  padding: 1rem;
 }
 
-.nav-item > a {
+.alert-container hr {
+  margin: 0;
+}
+
+.alert-header h2,
+p {
+  margin: 0.5rem 0rem;
+}
+
+.alert-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.alert-title > h2 {
+}
+
+.alert-body {
+  padding: 1rem;
+}
+
+.alert-body > p {
+  text-align: justify;
+}
+
+.customer-details {
+  border-left: 1px solid #777;
+  padding-left: 1rem;
+}
+
+.alert-footer > button {
+  background-color: teal;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  color: white;
+  outline: none;
+  border: none;
+  margin: 0rem 0.5rem;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1.1rem;
-  font-weight: 500;
-  padding-bottom: 0.5rem;
-  text-decoration: none;
-  color: #666;
+  box-shadow: 0.05rem 0.08rem 0.2rem 0rem #ccc;
 }
 
-.nav-item > a:hover {
-  color: #222;
-}
-
-.logo-holder {
-  float: left;
-  margin: 0rem 1rem;
-}
-
-.logo-holder > h2 {
-  margin: 0rem;
-  display: inline-block;
-  font-weight: 200;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.logo {
-  background-image: url('flower.jpeg');
-  background-position: center;
-  background-size: cover;
-  height: 2.5rem;
-  width: 2.5rem;
-  float: left;
-  margin-right: 1rem;
-  border-radius: 50%;
+.alert-footer > button:hover {
+  background-color: rgb(12, 151, 151);
 }
